# django-taxtea

./: .flake8  .gitignore  LICENSE  MANIFEST.in  README.md  conf.py  genindex.html  index.html  installation.html  manage.py  objects.inv  pyproject.toml  requirements-dev.txt  requirements.txt  search.html  searchindex.js  setup.cfg  tox.ini
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql-analysis.yml  docs.yml  lint.yml  publish.yml  tox.yml
_sources/: index.rst.txt
api-reference/: models.html  services.html
docs/: CNAME  Makefile  __init__.py  conf.py  index.rst  installation.rst  requirements.txt
docs/modules/: models.rst
docs/reference/: models.rst  services.rst
docs/usage/: getting-started.rst  stripe-integration.rst
shell/: asgi.py  settings.py  urls.py  wsgi.py
tax/: __init__.py  admin.py  apps.py  checks.py  core.py  exceptions.py  models.py  settings.py  signals.py  tests.py  utils.py
tax/fixtures/: states.json
tax/migrations/: 0001_initial.py
tax/models/: models.py
tax/services/: avalara.py  usps.py
taxtea/: __init__.py  admin.py  apps.py  checks.py  core.py  exceptions.py  models.py  settings.py  signals.py  tests.py  utils.py
taxtea/fixtures/: readme.md  states.json
taxtea/migrations/: 0001_initial.py  0002_auto_20200421_2250.py  0003_auto_20200804_1356.py
taxtea/services/: avalara.py  usps.py
tests/: settings.py  test_state_model.py  test_zipcode_model.py  test_zipservice.py
usage/: getting-started.html  stripe-integration.html
