[tool.poetry]
name = "django-taxtea"
version = "1.0.0"
description = "TaxTea - A Django Tax App for Saas"
authors = ["Matt Strayer <git@mattstrayer.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/lowercase-app/django-taxtea"
documentation = "https://djangotaxtea.com/"

packages = [
    { include = "taxtea" }
]


exclude = [
    "manage.py"
]

include = [
    "AUTHORS.rst",
    "CONTRIBUTING.rst",
    "HISTORY.rst",
    "LICENSE",
]

[tool.isort]
profile = "black"
src_paths = ["."]

[tool.poetry.dependencies]
python = "^3.8.0"
django = "^3.0.5"
xmltodict = "^0.12.0"
httpx = "^0.12.1"
django-localflavor = "^3.0.1"

[tool.poetry.dev-dependencies]
black = "^19.10b0"
flake8 = "^3.7.9"
model_bakery = "^1.1.0"
isort = "^5.0.9"
sphinx = "^3.1.2"
sphinx-rtd-theme = "^0.5.0"
safety = "^1.9.0"
sphinxcontrib_django = "^0.5.1"
sphinx_autodoc_annotation = "^1.0-1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
