[tool.poetry]
name = "django-taxtea"
version = "1.0.2"
description = "TaxTea - Django App that calculates tax rates for SaaS products"
authors = ["Matt Strayer <git@mattstrayer.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/lowercase-app/django-taxtea"
documentation = "https://www.djangotaxtea.com/"

keywords = [
    "django",
    "tax",
    "stripe",
    "SaaS"
]

classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "Topic :: Office/Business :: Financial",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Framework :: Django",
    "Framework :: Django :: 2.2",
    "Framework :: Django :: 3.0",
    'Programming Language :: Python',
    'Programming Language :: Python :: 3.6',
    'Programming Language :: Python :: 3.7',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3 :: Only',
]

packages = [
    { include = "taxtea" }
]


exclude = [
    "manage.py",
]

include = [
    "AUTHORS.rst",
    "CONTRIBUTING.rst",
    "HISTORY.rst",
    "LICENSE",
]

[tool.isort]
profile = "black"
src_paths = ["."]

[tool.poetry.dependencies]
python = "^3.6.0"
django = "^3.0.5"
xmltodict = "^0.12.0"
httpx = ">=0.13.3,<0.18.0"
django-localflavor = "^3.0.1"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
flake8 = "^3.9.2"
model_bakery = "^1.2.1"
isort = "^5.6.4"
sphinx = "^3.4.3"
sphinx-rtd-theme = "^0.5.0"
safety = "^1.10.3"
sphinxcontrib_django = "^0.5.1"
sphinx_autodoc_annotation = "^1.0-1"
tox = "^3.20.0"
pytest = "^6.2.2"
pytest-django = "^4.1.0"
pytest-cov = "^3.0.0"

[tool.poetry.scripts]
build_docs = "docs:makedocs"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
